fixed sub-card width on mobile

--- a/frontend/src/app/components/detail-card/items/common.scss
+++ b/frontend/src/app/components/detail-card/items/common.scss
@@ -315,6 +315,7 @@
       .extra,
       .sub-card {
         min-width: initial;
+        max-width: 100%;
         width: 100%;
         margin: 0;
       }
